# typeui

./: README.md  llms-install.md  package.json  plugin.json
.github/plugin/: marketplace.json
.mcp/: server.json
plugins/: README.md
plugins/antigravity/typeui/: README.md  mcp_config.json  plugin.json
plugins/antigravity/typeui/rules/: typeui.md
plugins/hermes/typeui/: MANIFEST.in  README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/hermes/typeui/typeui_hermes/: __init__.py  schemas.py  tools.py
plugins/hermes/typeui/typeui_hermes/skills/typeui/: SKILL.md
plugins/openclaw/typeui/: README.md  config.json  index.js  openclaw.plugin.json  package.json
plugins/openclaw/typeui/skills/typeui/: SKILL.md
plugins/vscode/typeui/: .mcp.json  README.md  plugin.json
rules/: typeui.md
src/prompts/: designSystem.ts
